--- a/image/bugzilla.conf
+++ b/image/bugzilla.conf
@@ -1,4 +1,4 @@
-<Directory /var/www/html/guestappname>
+<Directory /var/www/html/bugzilla>
     AddHandler cgi-script .cgi
     Options +ExecCGI
     DirectoryIndex index.cgi index.html
