--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -4,17 +4,17 @@ MAINTAINER  Dmitry Shapovalov
 ARG         hostuid=967
 ARG         hostgid=967
 
-ENV         DEBIAN_FRONTEND noninteractive
-ENV         RUN_USER bugzilla
-ENV         RUN_GROUP bugzilla
-ENV         RUN_PORT 8007
-ENV         APACHE_RUN_USER $RUN_USER
-ENV         APACHE_RUN_GROUP $RUN_GROUP
-ENV         DB_NAME bugs
-ENV         DB_USER_NAME bugs
-ENV         BUGZILLA_DOWNLOAD_URL https://ftp.mozilla.org/pub/mozilla.org/webtools/bugzilla-5.0.6.tar.gz
-ENV         BUGZILLA_DOWNLOAD_NAME bugzilla-5.0.6
-ENV         BUGZILLA_FOLDER_NAME bugzilla-5.0.6
+ENV         DEBIAN_FRONTEND=noninteractive \
+            RUN_USER=bugzilla \
+            RUN_GROUP=bugzilla \
+            RUN_PORT=8007 \
+            APACHE_RUN_USER=$RUN_USER \
+            APACHE_RUN_GROUP=$RUN_GROUP \
+            DB_NAME=bugs \
+            DB_USER_NAME=bugs \
+            BUGZILLA_DOWNLOAD_URL=https://ftp.mozilla.org/pub/mozilla.org/webtools/bugzilla-5.0.6.tar.gz \
+            BUGZILLA_DOWNLOAD_NAME=bugzilla-5.0.6 \
+            BUGZILLA_FOLDER_NAME=bugzilla-5.0.6
 
 COPY        . /tmp
 
