--- a/etc/apache2/sites-available/bugzilla.conf
+++ b/etc/apache2/sites-available/bugzilla.conf
@@ -1,2 +1,4 @@
-ProxyPass /bugzilla http://localhost:8007/bugzilla
-ProxyPassReverse /bugzilla http://localhost:8007/bugzilla
+<Location "/bugzilla">
+    ProxyPass http://localhost:8007/bugzilla
+    ProxyPassReverse http://localhost:8007/bugzilla
+</Location>
