Переменные поместил в кавычки

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -5,13 +5,13 @@ ARG         hostuid=967
 ARG         hostgid=967
 
 ENV         DEBIAN_FRONTEND=noninteractive \
-            RUN_USER=bugzilla \
-            RUN_GROUP=bugzilla \
+            RUN_USER="bugzilla" \
+            RUN_GROUP="bugzilla" \
             RUN_PORT=8007 \
-            APACHE_RUN_USER=bugzilla \
-            APACHE_RUN_GROUP=bugzilla \
-            DB_NAME=bugs \
-            DB_USER_NAME=bugs \
+            APACHE_RUN_USER="bugzilla" \
+            APACHE_RUN_GROUP="bugzilla" \
+            DB_NAME="bugs" \
+            DB_USER_NAME="bugs" \
             BUGZILLA_DOWNLOAD_URL="https://ftp.mozilla.org/pub/mozilla.org/webtools/bugzilla-5.0.6.tar.gz" \
             BUGZILLA_DOWNLOAD_NAME="bugzilla-5.0.6" \
             BUGZILLA_FOLDER_NAME="bugzilla-5.0.6"
