--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -12,13 +12,7 @@ ENV         DEBIAN_FRONTEND=noninteractive \
             APACHE_RUN_GROUP="bugzilla" \
             DB_NAME="bugs" \
             DB_USER_NAME="bugs" \
-            BUGZILLA_FOLDER_NAME="bugzilla-5.0.6" \
-            BAYOTEERS_BAYOT_BASE_FOLDER_NAME="bayoteers-BayotBase-01b4267" \
-            BAYOTEERS_ACTIVITY_GRAPH_FOLDER_NAME="bayoteers-ActivityGraph-d98ff7a" \
-            BAYOTEERS_AGILE_TOOLS_FOLDER_NAME="bayoteers-AgileTools-e4b1b21" \
-            BAYOTEERS_BUG_VIEW_PLUS_FOLDER_NAME="bayoteers-BugViewPlus-6bc03d6" \
-            BAYOTEERS_FIELD_VISIBILITY_FOLDER_NAME="bayoteers-FieldVisibility-b696eb1" \
-            BAYOTEERS_SEE_ALSO_PLUS_FOLDER_NAME="bayoteers-SeeAlsoPlus-92eaa19"
+            BUGZILLA_FOLDER_NAME="bugzilla-5.0.6"
 
 COPY        . /tmp
 
@@ -164,39 +158,15 @@ RUN         tar xzf /tmp/bin/$BUGZILLA_FOLDER_NAME.tar.gz -C /var/www/html && \
             /usr/bin/perl install-module.pl --all && \
             /usr/bin/perl install-module.pl PatchReader && \
             /usr/bin/perl checksetup.pl && \
-            chown -R -h $RUN_USER:$RUN_GROUP /var/www/html/bugzilla && \
             sed -i "s|\$webservergroup.*|\$webservergroup = '"$RUN_GROUP"';|" /var/www/html/bugzilla/localconfig && \
             sed -i "s|\$db_name.*|\$db_name = '"$DB_NAME"';|" /var/www/html/bugzilla/localconfig && \
             sed -i "s|\$db_user.*|\$db_user = '"$DB_USER_NAME"';|" /var/www/html/bugzilla/localconfig && \
             sed -i "s|\$db_port.*|\$db_port = 3306;|" /var/www/html/bugzilla/localconfig && \
             sed -i "s|\$db_sock.*|\$db_sock = '/var/run/mysqld/mysqld.sock';|" /var/www/html/bugzilla/localconfig
 
-# Configure bayoteers
-RUN         tar xzf /tmp/bin/$BAYOTEERS_BAYOT_BASE_FOLDER_NAME.tar.gz -C /var/www/html/bugzilla/extensions && \
-            rm /tmp/bin/$BAYOTEERS_BAYOT_BASE_FOLDER_NAME.tar.gz && \
-            mv /var/www/html/bugzilla/extensions/$BAYOTEERS_BAYOT_BASE_FOLDER_NAME /var/www/html/bugzilla/extensions/BayotBase && \
-            cd /var/www/html/bugzilla && \
-            /usr/bin/perl checksetup.pl && \
-            tar xzf /tmp/bin/$BAYOTEERS_ACTIVITY_GRAPH_FOLDER_NAME.tar.gz -C /var/www/html/bugzilla/extensions && \
-            rm /tmp/bin/$BAYOTEERS_ACTIVITY_GRAPH_FOLDER_NAME.tar.gz && \
-            mv /var/www/html/bugzilla/extensions/$BAYOTEERS_ACTIVITY_GRAPH_FOLDER_NAME /var/www/html/bugzilla/extensions/ActivityGraph && \
-            tar xzf /tmp/bin/$BAYOTEERS_AGILE_TOOLS_FOLDER_NAME.tar.gz -C /var/www/html/bugzilla/extensions && \
-            rm /tmp/bin/$BAYOTEERS_AGILE_TOOLS_FOLDER_NAME.tar.gz && \
-            mv /var/www/html/bugzilla/extensions/$BAYOTEERS_AGILE_TOOLS_FOLDER_NAME /var/www/html/bugzilla/extensions/AgileTools && \
-            tar xzf /tmp/bin/$BAYOTEERS_BUG_VIEW_PLUS_FOLDER_NAME.tar.gz -C /var/www/html/bugzilla/extensions && \
-            rm /tmp/bin/$BAYOTEERS_BUG_VIEW_PLUS_FOLDER_NAME.tar.gz && \
-            mv /var/www/html/bugzilla/extensions/$BAYOTEERS_BUG_VIEW_PLUS_FOLDER_NAME /var/www/html/bugzilla/extensions/BugViewPlus && \
-            tar xzf /tmp/bin/$BAYOTEERS_FIELD_VISIBILITY_FOLDER_NAME.tar.gz -C /var/www/html/bugzilla/extensions && \
-            rm /tmp/bin/$BAYOTEERS_FIELD_VISIBILITY_FOLDER_NAME.tar.gz && \
-            mv /var/www/html/bugzilla/extensions/$BAYOTEERS_FIELD_VISIBILITY_FOLDER_NAME /var/www/html/bugzilla/extensions/FieldVisibility && \
-            tar xzf /tmp/bin/$BAYOTEERS_SEE_ALSO_PLUS_FOLDER_NAME.tar.gz -C /var/www/html/bugzilla/extensions && \
-            rm /tmp/bin/$BAYOTEERS_SEE_ALSO_PLUS_FOLDER_NAME.tar.gz && \
-            mv /var/www/html/bugzilla/extensions/$BAYOTEERS_SEE_ALSO_PLUS_FOLDER_NAME /var/www/html/bugzilla/extensions/SeeAlsoPlus && \
-            cd /var/www/html/bugzilla && \
-            /usr/bin/perl checksetup.pl
-
-# Remove bin folder
-RUN         rm -rf /tmp/bin
+# Final configurations and clean-ups
+RUN         rm -rf /tmp/bin && \
+            chown -R -h $RUN_USER:$RUN_GROUP /var/www/html/bugzilla
 
 # Configure helper scripts
 RUN         mv /tmp/containerConfig /bugzilla/scripts && \
